Jira RPU-61 - homepage spotlight fix for desktop, wide, and xwide using margin left to move aside overlap on widescreen view, all other spotlight text views appear to be fixed

--- a/sites/all/themes/elx_front/sass/components/homepage/_homepage.scss
+++ b/sites/all/themes/elx_front/sass/components/homepage/_homepage.scss
@@ -142,12 +142,14 @@ body.page-home-page {
       padding: 75px;
       width: 75%;
       margin: auto;
+      margin-left: 75px;
     }
 
     @include respond-to('wide') {
       padding: 75px;
       width: 75%;
       margin: auto;
+      margin-left: 75px;
     }
 
     @include respond-to('xwide') {
